Separatron Fx and Thrust fix

--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33_Separatron.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33_Separatron.cfg
@@ -19,6 +19,11 @@ PART
 	node_attach = 0.0, 0.0, 0.044, 0.0, 0.0, -1.0
 	attachRules = 0,1,0,0,0
 	
+	fx_exhaustFlame_yellow_tiny = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, running
+	sound_vent_medium = engage
+	sound_rocket_mini = running
+	sound_vent_soft = disengage
+	
 	TechRequired = precisionPropulsion
 	entryCost = 1100
 	cost = 75
@@ -46,13 +51,13 @@ PART
 
 	MODULE
 	{
-		name = ModuleEnginesFX
+		name = ModuleEngines
 		thrustVectorTransformName = thrustTransform
 		throttleLocked = True
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 25
+		maxThrust = 15
 		heatProduction = 70
 		useEngineResponseTime = True		
 		engineAccelerationSpeed = 10.0		
@@ -83,92 +88,6 @@ PART
 		maxAmount = 15
 	}
 	
-	EFFECTS
-	{
-		running_solid
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_rocket_hard
-				volume = 0.0 0.0
-				volume = 1.0 1.0
-				pitch = 0.0 0.2
-				pitch = 1.0 1.0
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				name = smoketrail
-				modelName = Knes/Resources/Plumes/diamantTrailWhite
-				transformName = thrustTransform
-				emission = 0.05 0.0
-				emission = 0.1 0.25
-				emission = 0.8 0.8
-				energy = 0.8 0.3
-				energy = 1 0.5
-				speed = 0.5 0.5
-				speed = 1.0 1.0
-				localPosition = 0, 0, 1
-				localScale = 1, 1, 1
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				name = blaze
-				modelName = Knes/Resources/Plumes/RushTameChunks
-				transformName = thrustTransform
-				emission = 0.1 0.0
-				emission = 0.3 1.0
-				emission = 0.8 0.8
-				speed = 0.2 0.2
-				speed = 1.0 1.0
-				energy = 0.0 0.2
-				energy = 0.5 0.5
-				localScale = 0.3, 0.3, 0.3
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				name = chunk
-				modelName = Knes/Resources/Plumes/RushTameBlaze
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.5 0.8
-				speed = 0.0 0.2
-				speed = 0.5 0.5
-				energy = 0.0 0.0
-				energy = 0.5 1.0
-				localScale = 0.3, 0.3, 0.3
-			}
-		}
-		engage
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_vent_medium
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}
-		flameout
-		{
-			PREFAB_PARTICLE
-			{
-				prefabName = fx_exhaustSparks_flameout_2
-				transformName = thrustTransform
-				oneShot = true
-			}
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_explosion_low
-				volume = 1.5
-				pitch = 1.2
-				loop = false
-			}
-		}
-	}
 	
 	MODULE
     {
