Decouplers color variant

--- a/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_G09375.cfg
+++ b/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_G09375.cfg
@@ -57,5 +57,24 @@ PART
 		toggleEditor = true
 		toggleFlight = true
 	}
-	
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #977b44
+		secondaryColor = #977b44		
+		baseDisplayName = Default
+		baseThemeName = Gold
+		VARIANT
+		{
+			name = White
+			displayName = White
+			themeName = White
+			primaryColor = #ffffff
+			secondaryColor = #ffffff
+			TEXTURE
+			{
+				mainTextureURL = Knes/Parts/Core/Decouplers/Knes_Structural_White
+			}
+		}
+	}	
 }
