--- a/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_G0625.cfg
+++ b/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_G0625.cfg
@@ -64,4 +64,24 @@ PART
 	{
 		cube = Default, 0.09477547,0.7825552,0.4936077, 0.09477547,0.7825552,0.4936077, 0.3032565,1,0.09947455, 0.3032565,1,0.09947455, 0.09477547,0.7825552,0.4936078, 0.09477547,0.7825552,0.4936078, 0,0,0, 0.8233331,0.1572677,0.8233332
 	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #977b44
+		secondaryColor = #977b44		
+		baseDisplayName = Default
+		baseThemeName = Gold
+		VARIANT
+		{
+			name = White
+			displayName = White
+			themeName = White
+			primaryColor = #ffffff
+			secondaryColor = #ffffff
+			TEXTURE
+			{
+				mainTextureURL = Knes/Parts/Core/Decouplers/Knes_Structural_White
+			}
+		}
+	}
 }
