BP4 Avionic color variant

--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Avionics_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Avionics_09375.cfg
@@ -102,5 +102,35 @@ PART
 		amount = 20
 		maxAmount = 20
 	}
-
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = White
+		VARIANT
+		{
+			name = White
+			displayName = White
+			primaryColor = #ffffff
+			secondaryColor = #ffffff
+			sizeGroup = GroupB
+			GAMEOBJECTS
+			{
+				Brown = false			
+				White = true
+			}
+		}
+		VARIANT
+		{
+			name = Brown
+			displayName= Brown
+			primaryColor = #835c34
+			secondaryColor = #835c34
+			sizeGroup = GroupA
+			GAMEOBJECTS
+			{
+				Brown = true			
+				White = false
+			}
+		}				
+	}	
 }
