Collider nozzles diane engine

--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Diane_Engine_125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Diane_Engine_125.cfg
@@ -25,8 +25,8 @@ PART
     attachRules = 1,1,1,1,0
 
     TechRequired = heavierRocketry
-    entryCost = 1100
-    cost = 600
+    entryCost = 7000
+    cost = 1200
 
     category     = Propulsion
     subcategory  = 0
@@ -43,11 +43,10 @@ PART
     minimum_drag   = 0.15
     angularDrag    = 2
     crashTolerance = 15
-
-    maxTemp                    = 2000
-    heatConductivity           = 0.06
-    skinInternalConductionMult = 4.0
-    emissiveConstant           = 0.8
+	breakingForce = 150
+	breakingTorque = 150
+	maxTemp = 2000 // = 3000
+	fuelCrossFeed = True	
 
     stagingIcon = LIQUID_ENGINE
   
@@ -137,8 +136,9 @@ PART
 		bottomNodeName = bottom
 		isFairing = True
 		jettisonedObjectMass = 0.1
-		jettisonForce = 1
-		jettisonDirection = 0 0 -1
+		jettisonForce = 2
+		jettisonDirection = 0 0 1
+		useMultipleDragCubes = false		
 	}
 	MODULE
 	{
@@ -147,8 +147,9 @@ PART
 		bottomNodeName = bottom2
 		isFairing = True
 		jettisonedObjectMass = 0.1
-		jettisonForce = 1
+		jettisonForce = 2
 		jettisonDirection = 0 0 1
+		useMultipleDragCubes = false		
 	}
 
 	EFFECTS
