--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_1875.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_1875.cfg
@@ -115,7 +115,7 @@ PART
 	{
 		name = ModuleStructuralNodeToggle
 		NodeMenuName = #autoLOC_502003 //#autoLOC_502003 = Interstage Nodes
-		showNodes = False
+		showNodes = True
 	}	
 }
 
