--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375.cfg
@@ -116,6 +116,6 @@ PART
 	{
 		name = ModuleStructuralNodeToggle
 		NodeMenuName = #autoLOC_502003 //#autoLOC_502003 = Interstage Nodes
-		showNodes = False
+		showNodes = True
 	}	
 }
