--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_250.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_250.cfg
@@ -120,6 +120,6 @@ PART
 	{
 		name = ModuleStructuralNodeToggle
 		NodeMenuName = #autoLOC_502003 //#autoLOC_502003 = Interstage Nodes
-		showNodes = False
+		showNodes = True
 	}		
 }
