--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P16_9375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P16_9375.cfg
@@ -23,14 +23,6 @@ PART
     bulkheadProfiles = size0p5
     attachRules = 1,1,1,1,0
 	
-	fx_exhaustFlame_yellow = 0.0, -11.2673, 0.0, 0.0, 1.0, 0.0, running
-	fx_exhaustSparks_yellow = 0.0, -11.2673, 0.0, 0.0, 1.0, 0.0, running
-	fx_smokeTrail_medium = 0.0, -11.2673, 0.0, 0.0, 1.0, 0.0, running
-	sound_vent_medium = engage
-	sound_rocket_hard = running
-	sound_vent_soft = disengage
-	sound_explosion_low = flameout	
-	
     TechRequired = basicRocketry
     entryCost = 800
     cost = 120
@@ -104,18 +96,29 @@ PART
 			}
 			MODEL_MULTI_PARTICLE
 			{
+				modelName = Knes/Resources/Plumes/FX_Cora_Engine_1
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.4 0.8
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				//localOffset = 0, 0, 1
+			}				
+			MODEL_MULTI_PARTICLE
+			{
 				name = smoketrail
 				modelName = Knes/Resources/Plumes/diamantTrailWhite
-				transformName = fxTransform
+				transformName = fxTransform2
 				emission = 0.05 0.0
-				emission = 0.1 0.25
-				emission = 1.0 1.0
-				energy = 0.8 0.3
-				energy = 1 0.5
+				emission = 0.1 0.7
+				emission = 1.0 1.8
+				energy = 0.8 0.7
+				energy = 1 1.0
 				speed = 0.5 0.5
 				speed = 1.0 1.0
-				localPosition = 0, 0, 1
-				localScale = 1.5, 1.5, 1.5
+				localPosition = 0, 0, 5
+				localScale = 2.0, 2.0, 2.0
 			}
 			MODEL_MULTI_PARTICLE
 			{
@@ -123,13 +126,13 @@ PART
 				modelName = Knes/Resources/Plumes/RushTameChunks
 				transformName = fxTransform
 				emission = 0.1 0.0
-				emission = 0.5 1.5
+				emission = 0.5 1.0
 				emission = 1.0 1.0
 				speed = 0.2 0.2
 				speed = 1.0 1.0
 				energy = 0.0 0.2
 				energy = 0.5 0.5
-				localScale = 1.3, 1.3, 1.3
+				localScale = 1.0, 1.0, 1.0
 			}
 			MODEL_MULTI_PARTICLE
 			{
@@ -142,8 +145,8 @@ PART
 				speed = 0.5 0.5
 				energy = 0.0 0.0
 				energy = 0.5 1.0
-				localScale = 1.3, 1.3, 1.3
-			}
+				localScale = 1.0, 1.0, 1.0
+			}			
 		}
 		engage
 		{
