--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Booster_Rita_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Booster_Rita_09375.cfg
@@ -126,16 +126,16 @@ PART
 			{
 				name = smoketrail
 				modelName = Knes/Resources/Plumes/diamantTrailWhite
-				transformName = thrustTransform
+				transformName = fxTransform2
 				emission = 0.05 0.0
-				emission = 0.1 0.25
-				emission = 1.0 1.0
-				energy = 0.8 0.3
-				energy = 1 0.5
+				emission = 0.1 0.7
+				emission = 1.0 1.8
+				energy = 0.8 0.7
+				energy = 1 1.0
 				speed = 0.5 0.5
 				speed = 1.0 1.0
 				localPosition = 0, 0, 1
-				localScale = 1, 1, 1
+				localScale = 1.0, 1.0, 1.0
 			}
 			MODEL_MULTI_PARTICLE
 			{
