--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Carmen_FuelTank_125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Carmen_FuelTank_125.cfg
@@ -30,7 +30,7 @@ PART
 
 	category = FuelTank
 	subcategory = 0
-	title = MLF-12 "Carissa" FuelTank
+	title = MLF-12 "Calypso" FuelTank
 	manufacturer = Knes
 	description = Where we're going, we don't need paint. This fuel tank lacks decoration, but it's certain to please utilitarians.
 
