--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Diane_Engine_125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Diane_Engine_125.cfg
@@ -30,11 +30,11 @@ PART
 
     category     = Propulsion
     subcategory  = 0
-    title        = M-R12 "Carissa" Rocket Engine
+    title        = M-R12 "Calypso" Rocket Engine
     manufacturer = Knes
     description  = Big things sometimes come in small packages, no this though - this is a medium thing.
 
-    tags = 1.25 Knes Carissa Carmen
+    tags = 1.25 Knes Calypso Carmen
 
     mass = 0.7
 
