--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_FuelTank_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_FuelTank_09375.cfg
@@ -23,7 +23,7 @@ PART
 	bulkheadProfiles = size0p5
 	attachRules = 1,1,1,1,0
 
-	TechRequired = basicRocketry
+	TechRequired = generalRocketry
 	entryCost = 900
 	cost = 500
 
