--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Command_Cortex.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Command_Cortex.cfg
@@ -23,7 +23,7 @@ PART
 	cost = 2500
 	category = Pods
 	subcategory = 0
-	title = "Cortex" Avionics System
+	title = Probe Core "Cortex" Avionics System
 	manufacturer = Knes
 	description = 3.75m instrument unit for the Ariane 5 Core stage. Contains enough torque to control large rockets, and the batteries to keep them running.
 	mass = 0.75
