--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Command_Minus.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Command_Minus.cfg
@@ -23,7 +23,7 @@ PART
 	cost = 1500
 	category = Pods
 	subcategory = 0
-	title = "Minus" Avionics System
+	title = Probe Core "Minus" Avionics System
 	manufacturer = Knes
 	description = 1.875m instrument unit. Contains enough torque to control little rockets, and the batteries to keep them running.
 	mass = 0.15
