--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Booster_P03.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Booster_P03.cfg
@@ -99,32 +99,18 @@ PART
 			}
 			MODEL_MULTI_PARTICLE
 			{
-				name = smoketrail
-				modelName = Knes/Resources/Plumes/diamantTrailWhite
-				transformName = thrustTransform
-				emission = 0.05 0.0
-				emission = 0.1 0.25
-				emission = 0.8 0.8
-				energy = 0.8 0.3
-				energy = 1 0.5
-				speed = 0.5 0.5
-				speed = 1.0 1.0
-				localPosition = 0, 0, 1
-				localScale = 1, 1, 1
-			}
-			MODEL_MULTI_PARTICLE
-			{
 				name = blaze
 				modelName = Knes/Resources/Plumes/RushTameChunks
 				transformName = thrustTransform
 				emission = 0.1 0.0
-				emission = 0.3 1.0
-				emission = 0.8 0.8
+				emission = 0.5 1.0
+				emission = 1.0 1.0
 				speed = 0.2 0.2
 				speed = 1.0 1.0
 				energy = 0.0 0.2
 				energy = 0.5 0.5
-				localScale = 0.3, 0.3, 0.3
+				localPosition = 0, 0, 0.1
+				localScale = 0.1, 0.1, 0.1
 			}
 			MODEL_MULTI_PARTICLE
 			{
@@ -132,13 +118,27 @@ PART
 				modelName = Knes/Resources/Plumes/RushTameBlaze
 				transformName = thrustTransform
 				emission = 0.0 0.0
-				emission = 0.5 0.8
+				emission = 0.8 1.0
 				speed = 0.0 0.2
 				speed = 0.5 0.5
 				energy = 0.0 0.0
 				energy = 0.5 1.0
-				localScale = 0.3, 0.3, 0.3
-			}
+				localPosition = 0, 0, 0.1
+				localScale = 0.1, 0.1, 0.1
+			}		
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_light
+				transformName = thrustTransformFX
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 0.5
+				localRotation = 1, 0, 0, -90
+			}	
 		}
 		engage
 		{
@@ -174,7 +174,7 @@ PART
     {
         name = FXModuleThrottleEffects
         fxModuleNames = colorChanger
-        responseSpeed = 0.002
+        responseSpeed = 0.1
         dependOnEngineState = True
         dependOnThrottle = True
     }
