--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P10_9375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P10_9375.cfg
@@ -47,7 +47,7 @@ PART
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.75
     stagingIcon = SOLID_BOOSTER
-
+	
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -95,7 +95,18 @@ PART
 				pitch = 1.0 1.0
 				loop = true
 			}
-
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_veryLarge
+				transformName = fxTransform2
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 1
+			}	
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Knes/Resources/Plumes/FX_Cora_Engine_1
@@ -109,21 +120,6 @@ PART
 			}	
 			MODEL_MULTI_PARTICLE
 			{
-				name = smoketrail
-				modelName = Knes/Resources/Plumes/diamantTrailWhite
-				transformName = fxTransform2
-				emission = 0.05 0.0
-				emission = 0.1 0.7
-				emission = 1.0 1.8
-				energy = 0.8 0.7
-				energy = 1 1.0
-				speed = 0.5 0.5
-				speed = 1.0 1.0
-				localPosition = 0, 0, 5
-				localScale = 2.0, 2.0, 2.0
-			}
-			MODEL_MULTI_PARTICLE
-			{
 				name = blaze
 				modelName = Knes/Resources/Plumes/RushTameChunks
 				transformName = fxTransform
@@ -134,7 +130,7 @@ PART
 				speed = 1.0 1.0
 				energy = 0.0 0.2
 				energy = 0.5 0.5
-				localScale = 1.0, 1.0, 1.0
+				localScale = 0.9, 0.9, 0.9
 			}	
 			MODEL_MULTI_PARTICLE
 			{
@@ -147,7 +143,7 @@ PART
 				speed = 0.5 0.5
 				energy = 0.0 0.0
 				energy = 0.5 1.0
-				localScale = 1.0, 1.0, 1.0
+				localScale = 0.9, 0.9, 0.9
 			}			
 		}
 		engage
