--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_Rita2_9375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_Rita2_9375.cfg
@@ -46,7 +46,8 @@ PART
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.75
     stagingIcon = SOLID_BOOSTER
-
+	
+	
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -122,21 +123,18 @@ PART
 				pitch = 1.0 1.0
 				loop = true
 			}
-			MODEL_MULTI_PARTICLE
+			PREFAB_PARTICLE
 			{
-				name = smoketrail
-				modelName = Knes/Resources/Plumes/diamantTrailWhite
+				prefabName = fx_smokeTrail_veryLarge
 				transformName = fxTransform2
+				emission = 0.0 0.0
 				emission = 0.05 0.0
-				emission = 0.1 0.7
-				emission = 1.0 1.8
-				energy = 0.8 0.7
-				energy = 1 1.0
-				speed = 0.5 0.5
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
 				speed = 1.0 1.0
-				localPosition = 0, 0, 1
-				localScale = 1.0, 1.0, 1.0
-			}
+				localOffset = 0, 0, 1
+			}				
 			MODEL_MULTI_PARTICLE
 			{
 				name = blaze
