--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Booster_P064_0625.cfg
@@ -123,20 +123,18 @@ PART
 				pitch = 1.0 1.0
 				loop = true
 			}
-			MODEL_MULTI_PARTICLE
+			PREFAB_PARTICLE
 			{
-				name = smoketrail
-				modelName = Knes/Resources/Plumes/diamantTrailWhite
+				prefabName = fx_smokeTrail_light
 				transformName = thrustTransform
+				emission = 0.0 0.0
 				emission = 0.05 0.0
-				emission = 0.1 0.25
-				emission = 1.0 1.0
-				energy = 0.8 0.3
-				energy = 1 0.5
-				speed = 0.5 0.5
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
 				speed = 1.0 1.0
-				localPosition = 0, 0, 1
-				localScale = 1, 1, 1
+				localOffset = 0, 0, 0.8
+				localRotation = 1, 0, 0, -90
 			}
 			MODEL_MULTI_PARTICLE
 			{
@@ -150,6 +148,7 @@ PART
 				speed = 1.0 1.0
 				energy = 0.0 0.2
 				energy = 0.5 0.5
+				localPosition = 0, 0, 0.1
 				localScale = 0.3, 0.3, 0.3
 			}
 			MODEL_MULTI_PARTICLE
@@ -163,6 +162,7 @@ PART
 				speed = 0.5 0.5
 				energy = 0.0 0.0
 				energy = 0.5 1.0
+				localPosition = 0, 0, 0.1
 				localScale = 0.3, 0.3, 0.3
 			}
 		}
