--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Topaze_Booster_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Topaze_Booster_0625.cfg
@@ -128,22 +128,19 @@ PART
 				pitch = 0.0 0.2
 				pitch = 1.0 1.0
 				loop = true
-			}
-			MODEL_MULTI_PARTICLE
+			}				
+			PREFAB_PARTICLE
 			{
-				name = smoketrail
-				modelName = Knes/Resources/Plumes/diamantTrailWhite
-				transformName = fxTransform
+				prefabName = fx_smokeTrail_veryLarge
+				transformName = fxTransform2
+				emission = 0.0 0.0
 				emission = 0.05 0.0
-				emission = 0.1 0.5
-				emission = 1.0 2.0
-				energy = 0.8 0.5
-				energy = 1.0 1
-				speed = 0.5 0.5
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
 				speed = 1.0 1.0
-				localPosition = 0, 0, 6
-				localScale = 1, 1, 1
-			}
+				localOffset = 0, 0, 1
+			}	
 			MODEL_MULTI_PARTICLE
 			{
 				name = blaze
