--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Diane_Engine_125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Diane_Engine_125.cfg
@@ -136,7 +136,7 @@ PART
 		bottomNodeName = bottom
 		isFairing = True
 		jettisonedObjectMass = 0.1
-		jettisonForce = 2
+		jettisonForce = 5
 		jettisonDirection = 0 0 1
 		useMultipleDragCubes = false		
 	}
@@ -147,7 +147,7 @@ PART
 		bottomNodeName = bottom2
 		isFairing = True
 		jettisonedObjectMass = 0.1
-		jettisonForce = 2
+		jettisonForce = 5
 		jettisonDirection = 0 0 1
 		useMultipleDragCubes = false		
 	}
@@ -170,22 +170,22 @@ PART
 			{
 				name = smoketrail
 				modelName = Knes/Resources/Plumes/diamantTrailRed
-				transformName = thrustTransform
+				transformName = Smoke
 				emission = 0.05 0.0
 				emission = 0.1 0.55
-				emission = 1.0 1.0
+				emission = 1.0 1.5
 				energy = 0.8 0.5
 				energy = 1 1
 				speed = 0 0.5
 				speed = 1 0.5
-				localPosition = 0, 0, 1
-				// localScale = 1, 1, 1
+				localPosition = 0, 0, 5
+				localScale = 2, 2, 2
 			}
 			MODEL_MULTI_PARTICLE
 			{
-				name = flare
+				name = flare1
 				modelName = Knes/Resources/Plumes/diamantFlare
-				transformName = thrustTransform
+				transformName = FX1
 				emission = 0.05 0.0
 				emission = 0.1 0.55
 				emission = 1.0 1.0
@@ -198,9 +198,9 @@ PART
 			}
 			MODEL_MULTI_PARTICLE
 			{
-				name = shock
+				name = shock1
 				modelName = Knes/Resources/Plumes/diamantShock
-				transformName = thrustTransform
+				transformName = FX1
 				emission = 0.05 0.0
 				emission = 0.1 0.55
 				emission = 1.0 1.0
@@ -213,9 +213,9 @@ PART
 			}
 			MODEL_MULTI_PARTICLE
 			{
-				name = wisp
+				name = wisp1
 				modelName = Knes/Resources/Plumes/diamantWisp
-				transformName = thrustTransform
+				transformName = FX1
 				emission = 0.05 0.0
 				emission = 0.075 0.55
 				emission = 1.0 1.0
@@ -224,6 +224,49 @@ PART
 				localPosition = 0, 0, 1
 				localScale = 0.7, 0.7, 0.7
 			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = flare2
+				modelName = Knes/Resources/Plumes/diamantFlare
+				transformName = FX2
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				localPosition = 0, 0, 1
+				localScale = 0.4, 0.4, 0.2
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = shock2
+				modelName = Knes/Resources/Plumes/diamantShock
+				transformName = FX2
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				localPosition = 0, 0, 0
+				localScale = 0.7, 0.7, 0.7
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = wisp2
+				modelName = Knes/Resources/Plumes/diamantWisp
+				transformName = FX2
+				emission = 0.05 0.0
+				emission = 0.075 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 1 1
+				localPosition = 0, 0, 1
+				localScale = 0.6, 0.6, 0.5
+			}			
 		}
 		engage
 		{
