--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_SL.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Engine_SL.cfg
@@ -87,7 +87,7 @@ PART
     {
         name = ModuleGimbal
         gimbalTransformName = gimbalTransform
-	gimbalRange = 3
+		gimbalRange = 4
         useGimbalResponseSpeed = true
         gimbalResponseSpeed = 10
     }
@@ -198,21 +198,19 @@ PART
 				pitch = 1.0 1.0
 				loop = true
 			}
-			MODEL_MULTI_PARTICLE
+			PREFAB_PARTICLE
 			{
-				name = smoketrail
-				modelName = Knes/Resources/Plumes/diamantTrailRed
-				transformName = thrustTransform
+				prefabName = fx_smokeTrail_light
+				transformName = thrustTransformFX
+				emission = 0.0 0.0
 				emission = 0.05 0.0
-				emission = 0.1 0.55
-				emission = 1.0 1.0
-				energy = 0.8 0.5
-				energy = 1 1
-				speed = 0 0.5
-				speed = 1 0.5
-				localPosition = 0, 0, 1
-				// localScale = 1, 1, 1
-			}
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 0.5
+				localRotation = 1, 0, 0, -90
+			}				
 			MODEL_MULTI_PARTICLE
 			{
 				name = flare
