--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Catherine_Stage_1875.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Catherine_Stage_1875.cfg
@@ -143,26 +143,12 @@ PART
 				pitch = 1.0 1.5
 				loop = true
 			}
+		
 			MODEL_MULTI_PARTICLE
 			{
-				name = smoketrail
-				modelName = Knes/Resources/Plumes/diamantTrailRed
-				transformName = thrustTransform
-				emission = 0.05 0.0
-				emission = 0.1 0.55
-				emission = 1.0 1.0
-				energy = 0.8 0.5
-				energy = 1 1
-				speed = 0 0.5
-				speed = 1 0.5
-				//localPosition = 0, 0, 1
-				// localScale = 1, 1, 1
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				name = flare
+				name = flare1
 				modelName = Knes/Resources/Plumes/diamantFlare
-				transformName = thrustTransform
+				transformName = FX1
 				emission = 0.05 0.0
 				emission = 0.1 0.55
 				emission = 1.0 1.0
@@ -175,9 +161,9 @@ PART
 			}	
 			MODEL_MULTI_PARTICLE
 			{
-				name = shock
+				name = shock1
 				modelName = Knes/Resources/Plumes/diamantShock
-				transformName = thrustTransform
+				transformName = FX1
 				emission = 0.05 0.0
 				emission = 0.1 0.55
 				emission = 1.0 1.0
@@ -190,9 +176,138 @@ PART
 			}
 			MODEL_MULTI_PARTICLE
 			{
-				name = wisp
+				name = wisp1
 				modelName = Knes/Resources/Plumes/diamantWisp
-				transformName = thrustTransform
+				transformName = FX1
+				emission = 0.05 0.0
+				emission = 0.075 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 1 1
+				//localPosition = 0, 0, 1
+				//localScale = 0.7, 0.7, 0.7
+			}				
+			MODEL_MULTI_PARTICLE
+			{
+				name = flare2
+				modelName = Knes/Resources/Plumes/diamantFlare
+				transformName = FX2
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				//localPosition = 0, 0, 1
+				//localScale = 0.7, 0.7, 0.7
+			}	
+			MODEL_MULTI_PARTICLE
+			{
+				name = shock2
+				modelName = Knes/Resources/Plumes/diamantShock
+				transformName = FX2
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				//localPosition = 0, 0, 0
+				//localScale = 0.7, 0.7, 0.7
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = wisp2
+				modelName = Knes/Resources/Plumes/diamantWisp
+				transformName = FX2
+				emission = 0.05 0.0
+				emission = 0.075 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 1 1
+				//localPosition = 0, 0, 1
+				//localScale = 0.7, 0.7, 0.7
+			}				
+			MODEL_MULTI_PARTICLE
+			{
+				name = flare3
+				modelName = Knes/Resources/Plumes/diamantFlare
+				transformName = FX3
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				//localPosition = 0, 0, 1
+				//localScale = 0.7, 0.7, 0.7
+			}	
+			MODEL_MULTI_PARTICLE
+			{
+				name = shock3
+				modelName = Knes/Resources/Plumes/diamantShock
+				transformName = FX3
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				//localPosition = 0, 0, 0
+				//localScale = 0.7, 0.7, 0.7
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = wisp3
+				modelName = Knes/Resources/Plumes/diamantWisp
+				transformName = FX3
+				emission = 0.05 0.0
+				emission = 0.075 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 1 1
+				//localPosition = 0, 0, 1
+				//localScale = 0.7, 0.7, 0.7
+			}				
+			MODEL_MULTI_PARTICLE
+			{
+				name = flare4
+				modelName = Knes/Resources/Plumes/diamantFlare
+				transformName = FX4
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				//localPosition = 0, 0, 1
+				//localScale = 0.7, 0.7, 0.7
+			}	
+			MODEL_MULTI_PARTICLE
+			{
+				name = shock4
+				modelName = Knes/Resources/Plumes/diamantShock
+				transformName = FX4
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				//localPosition = 0, 0, 0
+				//localScale = 0.7, 0.7, 0.7
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = wisp4
+				modelName = Knes/Resources/Plumes/diamantWisp
+				transformName = FX4
 				emission = 0.05 0.0
 				emission = 0.075 0.55
 				emission = 1.0 1.0
@@ -201,17 +316,6 @@ PART
 				//localPosition = 0, 0, 1
 				//localScale = 0.7, 0.7, 0.7
 			}			
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Knes/Resources/Plumes/FX_Cora_Engine_1
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.4 0.8
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				//localOffset = 0, 0, 1
-			}
 		}
 		engage
 		{
