--- a/GameData/Knes/Parts/Spacecraft/Crew_Pod_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Crew_Pod_09375.cfg
@@ -1,3 +1,7 @@
+
+// ʕ•ᴥ•ʔ    Knes Mod   °(ᵔᴥᵔ)°
+// Stéphane Colombain aka Well
+
 PART
 {
 
@@ -9,6 +13,7 @@ PART
 	{
 		model = Knes/Parts/Spacecraft/Crew_Pod_09375
 	}
+	
 	scale = 1.0
 	rescaleFactor = 1.0
 
@@ -31,7 +36,7 @@ PART
 
     category     = Pods
     subcategory  = 0
-    title        = Crew_Pod_09375_IVA
+    title        = Crew_Pod_09375
     manufacturer = Knes
     description  = 
 
