Crew Pod 0.9375 and Heatshield

--- a/GameData/Knes/Parts/Spacecraft/Crew_Pod_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Crew_Pod_09375.cfg
@@ -23,6 +23,10 @@ PART
 	CoMOffset = 0.0, -0.3, 0.0 
 	CoPOffset = 0.0, -0.3, 0.0 
 	CoLOffset = 0.0, -0.3, 0.0 
+	CenterOfBuoyancy = 0.0, 0.5, 0.0
+	CenterOfDisplacement = 0.0, -0.3, 0.0
+	buoyancy = 3.5
+	buoyancyUseSine = False
 	
 	stackSymmetry = 1
 
@@ -42,7 +46,7 @@ PART
 
     tags = knes test
 
-	mass = 1
+	mass = 0.75
 
 	dragModelType  = default
 	maximum_drag   = 0.20
@@ -80,9 +84,9 @@ PART
     {
         name = ModuleReactionWheel
         
-        PitchTorque = 1.5
-        YawTorque = 1.5
-        RollTorque = 1.5
+        PitchTorque = 1.0
+        YawTorque = 1.0
+        RollTorque = 1.0
         
         RESOURCE
         {
@@ -117,40 +121,40 @@ PART
     }
 
     MODULE
-	{
-		name = ModuleColorChanger
-		shaderProperty = _EmissiveColor
-		animRate = 0.8
-		animState = false
-		useRate = true
-		toggleInEditor = true
-		toggleInFlight = true
-		toggleInFlight = true
-		unfocusedRange = 5
-		toggleName = Toggle Lights
-		eventOnName = Lights On
-		eventOffName = Lights Off
-		toggleAction = True
-		defaultActionGroup = Light
-		redCurve
-		{
-			key = 0 0 0 3
-			key = 1 1 0 0
-		}
-		greenCurve
-		{
-			key = 0 0 0 1
-			key = 1 1 1 0
-		}
-		blueCurve
-		{
-			key = 0 0 0 0
-			key = 1 0.7 1.5 0
-		}
-		alphaCurve
-		{
-			key = 0 1
-		}
-	}
+    {
+        name = ModuleColorChanger
+        shaderProperty = _EmissiveColor
+        animRate = 0.8
+        animState = false
+        useRate = true
+        toggleInEditor = true
+        toggleInFlight = true
+        toggleInFlight = true
+        unfocusedRange = 5
+        toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+        eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+        eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+        toggleAction = True
+        defaultActionGroup = Light
+        redCurve
+        {
+            key = 0 0 0 3
+            key = 1 1 0 0
+        }
+        greenCurve
+        {
+            key = 0 0 0 1
+            key = 1 1 1 0
+        }
+        blueCurve
+        {
+            key = 0 0 0 0
+            key = 1 0.7 1.5 0
+        }
+        alphaCurve
+        {
+            key = 0 1
+        }
+    }
 
 }
