--- a/GameData/Knes/Parts/Spacecraft/Heatshield_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Heatshield_09375.cfg
@@ -23,7 +23,11 @@ PART
 	CoMOffset = 0.0, -0.3, 0.0 
 	CoPOffset = 0.0,  0.8, 0.0
 	CoLOffset = 0.0, -0.1, 0.0
-
+	CenterOfBuoyancy = 0.0, 0.4, 0.0
+	CenterOfDisplacement = 0.0, -0.2, 0.0
+	buoyancy = 1.0
+	buoyancyUseSine = False	
+	
 	bulkheadProfiles = size0p5
 
 	attachRules = 1,0,1,1,0
@@ -31,8 +35,8 @@ PART
 	sound_vent_large = decouple
 
 	TechRequired = survivability
-	entryCost = 1200
-	cost = 500
+	entryCost = 800
+	cost = 400
 
 	category     = Thermal
 	subcategory  = 0
@@ -42,7 +46,7 @@ PART
 
 	tags = Knes heatshield thermal
 
-	mass = 0.110
+	mass = 0.1
 
 	dragModelType  = default
 	maximum_drag   = 0.20
@@ -50,7 +54,7 @@ PART
 	angularDrag    = 2
 	breakingForce = 200
 	breakingTorque = 200
-	crashTolerance = 20
+	crashTolerance = 10
 
 	maxTemp             = 3400
 	skinMaxTemp         = 3400
@@ -76,31 +80,33 @@ PART
 	MODULE
 	{
 		name = ModuleDecouple
-		ejectionForce = 100
-		isOmniDecoupler = false
-		explosiveNodeID = top
-		menuName = Decouple HeatShield
-		stagingEnabled = True
-		stagingEnableText = HS Decouple Not Staged
-		stagingDisableText = HS Decouple Staged
+		ejectionForce = 50
+		isOmniDecoupler = true
+		menuName = #autoLOC_502004 //#autoLOC_502004 = Jettison Heat Shield
+		stagingEnabled = False
+		stagingEnableText = #autoLOC_502005 //#autoLOC_502005 = HS Jettison Not Staged
+		stagingDisableText = #autoLOC_502006 //#autoLOC_502006 = HS Jettison Staged
 	}
 
 	MODULE
 	{
-			name = ModuleAblator
-			ablativeResource = Ablator
-			lossExp = -6500
-			lossConst = 0.1
-			pyrolysisLossFactor = 6000
-			reentryConductivity = 0.01
-			ablationTempThresh = 500
+		name = ModuleAblator
+		ablativeResource = Ablator
+		lossExp = -7500
+		lossConst = 0.1
+		pyrolysisLossFactor = 6000
+		reentryConductivity = 0.01
+		ablationTempThresh = 500
+		
+		useChar = False
+		charModuleName = shieldChar
 	}
 
 	RESOURCE
 	{
 			name = Ablator
-			amount = 100
-			maxAmount = 100
+			amount = 60
+			maxAmount = 60
 	}	
 
 }
