--- a/GameData/Knes/Parts/Spacecraft/Knes_Crew_Pod_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Knes_Crew_Pod_09375.cfg
@@ -40,9 +40,9 @@ PART
 
     category     = Pods
     subcategory  = 0
-    title        = Crew_Pod_09375
+    title        = Command Pod "Viking"
     manufacturer = Knes
-    description  = 
+    description  = This Command Pod was heralded as a far safer and more reliable option than its predecessors by rocket scientists throughout the world. One crew ballistic re-entry capsule.
 
     tags = knes test
 
