--- a/GameData/Knes/Parts/Spacecraft/Knes_Heatshield_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Knes_Heatshield_09375.cfg
@@ -40,11 +40,11 @@ PART
 
 	category     = Thermal
 	subcategory  = 0
-	title        = Heatshield knes
+	title        = Heatshield "Turtle"
 	manufacturer = Knes
-	description  = 
+	description  = A small structural HeatShield in 0.9375 scale to protect your craft.
 
-	tags = Knes heatshield thermal
+	tags = Knes heatshield thermal ablat drag entry insulate protect re- rocket therm
 
 	mass = 0.1
 
