--- a/GameData/Knes/Parts/Spacecraft/Knes_Parachute_Inline_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Knes_Parachute_Inline_0625.cfg
@@ -34,9 +34,9 @@ PART
 
 	category     = Utility
 	subcategory  = 0
-	title        = Inline Parachute
+	title        = Inline Parachute "Uncertain"
 	manufacturer = Knes
-	description  = Inline Parachute
+	description  = The "Uncertain" Parachute might be considered by some to be little more than a random stitching together of the surplus parts it is, in fact, made from. A generally better alternative to being in freefall.
 
 	tags = Knes chute parachute inline stack
 
