--- a/GameData/Knes/Parts/Spacecraft/Knes_Crew_Pod_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Knes_Crew_Pod_09375.cfg
@@ -19,7 +19,8 @@ PART
 
 	node_stack_top    = 0.0,  0.28, 0.0, 0.0, 1.0, 0.0, 1	
 	node_stack_bottom = 0.0, -0.32813, 0.0, 0.0, -1.0, 0.0, 1
-
+	fx_gasBurst_white = 0.0, 0.05, 0.0, 0.0, 1.0, 0.0, decouple		
+	
 	CoMOffset = 0.0, -0.3, 0.0 
 	CoPOffset = 0.0, -0.3, 0.0 
 	CoLOffset = 0.0, -0.3, 0.0 
@@ -94,6 +95,16 @@ PART
             rate = 0.075
         }
     }
+
+	MODULE
+	{
+		name = ModuleDecouple
+		explosiveNodeID = top
+		ejectionForce = 20
+
+		staged = false
+		menuName = Clear Escape Hatch
+	}	
 
     MODULE
     {
