--- a/GameData/Knes/Parts/Spacecraft/Knes_Crew_Pod_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Knes_Crew_Pod_09375.cfg
@@ -55,7 +55,7 @@ PART
 	angularDrag    = 2
 	crashTolerance = 10
 	maxTemp = 3250
-
+	vesselType = Ship
 	CrewCapacity = 1
 
 	INTERNAL
@@ -130,7 +130,19 @@ PART
         evaOnlyStorage = True
         storageRange = 1.3
     }
-
+	MODULE
+	{
+		name = ModuleDataTransmitter
+		antennaType = INTERNAL
+		packetInterval = 1.0
+		packetSize = 2
+		packetResourceCost = 12.0
+		requiredResource = ElectricCharge
+		antennaPower = 5000
+		optimumRange = 2500
+		packetFloor = .1
+		packetCeiling = 5
+	}
     MODULE
     {
         name = ModuleColorChanger
