--- a/GameData/Knes/Parts/Spacecraft/Knes_DockingPortJr_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Knes_DockingPortJr_0625.cfg
@@ -25,7 +25,7 @@ PART
 	cost = 800
 	category = Coupling
 	subcategory = 0
-	title = Docking Port Jr.
+	title = K06 "Arcas" Docking Port Jr.
     manufacturer = Knes	
 	description = #autoLOC_500853 //#autoLOC_500853 = Originally marketed as a child-size version of the normal Clamp-O-Tron, the Clamp-O-Tron Jr. soon found use among hobbyists and professional space agencies alike for its compact profile, lightweight structure, and all-round cuteness. As a result of its small size, kerbals need to hold their breath and wiggle to slip through.
 	attachRules = 1,1,1,1,0
@@ -37,7 +37,7 @@ PART
 	crashTolerance = 10
 	maxTemp = 2000 // = 3400
 	bulkheadProfiles = size0, srf
-	tags = #autoLOC_500854 //#autoLOC_500854 = berth capture connect couple dock fasten join moor socket
+	tags = knes berth capture connect couple dock fasten join moor socket
 	stagingIcon = DECOUPLER_VERT
 	
 	MODULE
