--- a/GameData/Knes/Parts/Spacecraft/Knes_Service_Module_Viking_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Knes_Service_Module_Viking_09375.cfg
@@ -134,19 +134,16 @@ PART
 		}	
 		running
 		{
-			AUDIO_MULTI_POOL
+			AUDIO
 			{
 				channel = Ship
-				transformName = thrustTransform
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
-				volume = 1.0 0.1
-				pitch = 0.0 0.75
-				pitch = 1.0 1.5
+				volume = 1.0 1.0
+				pitch = 0.0 0.8
+				pitch = 1.0 1.0
 				loop = true
-			}
+			}	
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
