--- a/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_Radial_Small.cfg
+++ b/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_Radial_Small.cfg
@@ -18,7 +18,7 @@ PART
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, decouple
 	sound_vent_large = decouple
-	TechRequired = stability
+	TechRequired = engineering101
 	entryCost = 1200
 	cost = 200
 	category = Coupling
