--- a/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/Knes_Aero_Fairing_09375.cfg
@@ -24,7 +24,7 @@ PART
 	fx_gasBurst_white = 0.0, 0.3, 0.0, 0.0, 1.0, 0.0, deploy
 	sound_vent_large = deploy
 	
-	TechRequired = generalRocketry
+	TechRequired = stability
 	entryCost = 3000
 	cost = 300
 	category = Payload
