--- a/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Asterix.cfg
+++ b/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Asterix.cfg
@@ -21,7 +21,7 @@ PART
 	
 	CrewCapacity = 0
 
-	TechRequired = unmannedTech
+	TechRequired = engineering101
 	entryCost = 2500
 	cost = 150
 	category = Pods
