--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Booster_EAP.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Booster_EAP.cfg
@@ -26,7 +26,7 @@
 	sound_vent_soft = disengage
 	sound_explosion_low = flameout
 	
-	TechRequired = generalRocketry
+	TechRequired = heavyRocketry
 	entryCost = 2500
 	cost = 7500
 	category = Engine
