--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Booster_P80.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Booster_P80.cfg
@@ -26,7 +26,7 @@
 	sound_vent_soft = disengage
 	sound_explosion_low = flameout
 	
-	TechRequired = basicRocketry
+	TechRequired = advRocketry
 	entryCost = 2400
 	cost = 5000
 	category = Engine
