--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Structural_Struts.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Structural_Struts.cfg
@@ -14,7 +14,7 @@
 	rimFalloff = 3
 	alphaCutoff = 0.0
 	iconCenter = -4.69147, 2.64656, 0.0
-	TechRequired = fuelSystems
+	TechRequired = generalConstruction
 	entryCost = 6500
 	cost = 150
 	category = Structural
