--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Utility_SafeSystem_1875.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Utility_SafeSystem_1875.cfg
@@ -27,7 +27,7 @@
 	node_stack_bottom = 0.0, -1.104, 0.0, 0.0, -1.0, 0.0, 2
 	
 	buoyancy = 0.375
-	TechRequired = stability
+	TechRequired = aerodynamicSystems
 	entryCost = 6800
 	cost = 1800
 	category = Utility
