--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Booster_P03.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Booster_P03.cfg
@@ -19,7 +19,7 @@ PART
 	node_attach = 0.0, 0.0, 0.1, 0.0, 0.0, -1.0
 	attachRules = 0,1,0,0,0
 	
-	TechRequired = precisionPropulsion
+    TechRequired = generalRocketry
 	entryCost = 1100
 	cost = 75
 	category = Engine
