--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Avionics_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Avionics_09375.cfg
@@ -25,7 +25,7 @@ PART
 	bulkheadProfiles = size0p5
 	attachRules = 1,1,1,1,0
 
-	TechRequired = basicRocketry
+	TechRequired = flightControl
 	entryCost = 2800
 	cost = 250
 	category     = Pods
