--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_NoseCone_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_NoseCone_09375.cfg
@@ -21,7 +21,7 @@ PART
 	node_attach       = 0.0,  0.0, 0.46875, 0.0,  0.0, -1.0
 	
 	bulkheadProfiles = size0p5	
-	TechRequired = basicRocketry
+	TechRequired = stability
 	entryCost = 1500
 	cost = 180
 	category = Aero
