--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Carmen_FuelTank_Extended_125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Carmen_FuelTank_Extended_125.cfg
@@ -24,7 +24,7 @@ PART
 
 	attachRules = 1,1,1,1,0
 
-	TechRequired = specializedConstruction
+    TechRequired = generalRocketry
 	entryCost = 3800
 	cost = 2000
 
