--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Adapter_125_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Cora_Adapter_125_09375.cfg
@@ -19,12 +19,12 @@ PART
 	node_stack_top = 0.0, 0.34384, 0.0, 0.0, 1.0, 0.0, 0
 	node_stack_bottom = 0.0, -0.34384, 0.0, 0.0, -1.0, 0.0, 0
 	
-	TechRequired = miniaturization
+	TechRequired = generalConstruction
 	entryCost = 4400
 	cost = 150
 	category = Structural
 	subcategory = 0
-	title = Adapter K-09375 ""
+	title = Adapter K-09375 "Both"
 	manufacturer = Knes
 	description = A small parts adapter for space probes and payload.
 	attachRules = 1,0,1,1,0
