--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Mireille_Engine_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Mireille_Engine_09375.cfg
@@ -26,7 +26,7 @@ PART
         
     attachRules = 1,1,1,1,0
 
-    TechRequired = heavierRocketry
+    TechRequired = generalRocketry
     entryCost = 1800
     cost = 800
 
