--- a/GameData/Knes/Parts/LiftingsBodies/IXV/Knes_Command_K-IXV.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/IXV/Knes_Command_K-IXV.cfg
@@ -28,7 +28,7 @@ PART
 	breakingTorque = 55
 
 // --- editor parameters ---
-	TechRequired = stability
+	TechRequired = aerodynamicSystems
 	entryCost = 11000
 	cost = 4000
 	category = Pods
