--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/Knes_Hermes.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/Knes_Hermes.cfg
@@ -25,7 +25,7 @@
 	//node_stack_top = 0.232, 3.159, -0.25, 0.0, 0.0, 1.0, 0	
 	//node_stack_top2 = -0.232, 3.159, -0.25, 0.0, 0.0, 1.0, 0
 	
-	TechRequired = advUnmanned
+	TechRequired = highAltitudeFlight
 	entryCost = 74000
 	cost = 18500
 	category = Pods
