--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/Knes_Hermes_HRM.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/Knes_Hermes_HRM.cfg
@@ -15,7 +15,7 @@
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple	
 	buoyancy = 0.375
-	TechRequired = largeVolumeContainment
+	TechRequired = highAltitudeFlight
 	entryCost = 8800
 	cost = 2600
 	category = Utility
