--- a/GameData/Knes/Parts/Spacecraft/Knes_EscapeTower_Small.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Knes_EscapeTower_Small.cfg
@@ -22,7 +22,7 @@ PART
 	sound_vent_soft = disengage
 	sound_explosion_low = flameout
 	fx_gasBurst_white = 0.0, 0.05, 0.0, 0.0, 1.0, 0.0, decouple		
-	TechRequired = landing
+	TechRequired = survivability
 	entryCost = 4500
 	cost = 1000
 	category = Utility
