--- a/GameData/Knes/Parts/Spacecraft/Knes_MonoProp_FuelTank_Medium_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Knes_MonoProp_FuelTank_Medium_09375.cfg
@@ -21,7 +21,7 @@ PART
 	
 	node_attach = 0.0, 0.0, 0.46875, 0.0, 0.0, -1.0	
 	
-	TechRequired = advFuelSystems
+    TechRequired = generalRocketry
 	entryCost = 4600
 	cost = 400
 	category = FuelTank
