--- a/GameData/Knes/Parts/Spacecraft/Knes_MonoProp_FuelTank_Nano_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Knes_MonoProp_FuelTank_Nano_09375.cfg
@@ -21,7 +21,7 @@ PART
 	
 	node_attach = 0.0, 0.0, 0.46875, 0.0, 0.0, -1.0	
 	
-	TechRequired = advFuelSystems
+    TechRequired = generalRocketry
 	entryCost = 1500
 	cost = 80
 	category = FuelTank
