--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
@@ -25,7 +25,7 @@ PART
 	bulkheadProfiles = size0
 	attachRules = 1,1,1,1,0
 
-	TechRequired = basicRocketry
+	TechRequired = stability
 	entryCost = 2800
 	cost = 250
 	category     = Pods
