--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron_B.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron_B.cfg
@@ -21,7 +21,7 @@ PART
 	bulkheadProfiles = srf	
 	attachRules = 0,1,0,1,0
 	
-	TechRequired = basicRocketry
+	TechRequired = stability
 	entryCost = 800
 	cost = 100
 	category = Aero
