--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_H3_Engine_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_H3_Engine_0625.cfg
@@ -23,7 +23,7 @@ PART
     bulkheadProfiles = size0
     attachRules = 1,1,1,1,0
 	
-    TechRequired = basicRocketry
+	TechRequired = propulsionSystems
     entryCost = 1200
     cost = 550
 
