--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L140.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L140.cfg
@@ -23,7 +23,7 @@ PART
         
     attachRules = 1,1,1,1,0
 
-    TechRequired = heavierRocketry
+	TechRequired = advRocketry
     entryCost = 1100
     cost = 1200
 
