--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Diane_Engine_125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Diane_Engine_125.cfg
@@ -24,7 +24,7 @@ PART
         
     attachRules = 1,1,1,1,0
 
-    TechRequired = heavierRocketry
+    TechRequired = generalRocketry
     entryCost = 7000
     cost = 1200
 
