--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Mireille_LFO_long_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Mireille_LFO_long_09375.cfg
@@ -24,7 +24,7 @@ PART
 
 	attachRules = 1,1,1,1,0
 
-	TechRequired = specializedConstruction
+    TechRequired = generalRocketry
 	entryCost = 1500
 	cost = 300
 
