--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/Knes_Hermes_AileronR.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/Knes_Hermes_AileronR.cfg
@@ -11,7 +11,7 @@ PART
 	rescaleFactor = 1
 	node_stack_SOAR = 0, -0.02, 0.01, 0.0, 1.0, 0.0, 0
 	node_attach = 0, -0.02, 0.01, 0.0, 1.0, 0.0, 0
-	TechRequired = advUnmanned
+	TechRequired = highAltitudeFlight
 	entryCost = 4000
 	cost = 850
 	category = Aero
