--- a/GameData/Knes/Compatibility/Kerbal Inventory System (KIS)/Knes_KIS.cfg
+++ b/GameData/Knes/Compatibility/Kerbal Inventory System (KIS)/Knes_KIS.cfg
@@ -57,7 +57,7 @@
 			name = ModuleKISInventory
 			maxVolume = 1000
 			externalAccess = true
-			internalAccess = false
+			internalAccess = true
 			slotsX = 4
 			slotsY = 4
 			slotSize = 50
@@ -69,5 +69,24 @@
 		}
 		
 	}
+	
+	@PART[Knes_Cargo_Pod_09375]:NEEDS[KIS]
+	{
+		%MODULE[ModuleKISInventory]	
+		{
+			name = ModuleKISInventory
+			maxVolume = 800
+			externalAccess = true
+			internalAccess = true
+			slotsX = 4
+			slotsY = 4
+			slotSize = 50
+			itemIconResolution = 128
+			selfIconResolution = 128
+			openSndPath = KIS/Sounds/containerOpen
+			closeSndPath = KIS/Sounds/containerClose
+			defaultMoveSndPath = KIS/Sounds/itemMove
+		}
 
+	}
 
