--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Utility_SafeSystem_1875.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Utility_SafeSystem_1875.cfg
@@ -1,4 +1,8 @@
-﻿PART
+﻿
+// ʕ•ᴥ•ʔ    Knes Mod   °(ᵔᴥᵔ)°
+// Stéphane Colombain aka Well
+
+PART
 {
 	name = Knes_Utility_SafeSystem_1875
 	module = Part
