--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Structural_Struts.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Structural_Struts.cfg
@@ -1,4 +1,8 @@
-﻿PART
+﻿
+// ʕ•ᴥ•ʔ    Knes Mod   °(ᵔᴥᵔ)°
+// Stéphane Colombain aka Well
+
+PART
 {
 	name = Knes_Structural_Struts
 	module = CompoundPart
