--- a/GameData/Knes/Parts/Spacecraft/Knes_Cargo_Pod_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Knes_Cargo_Pod_09375.cfg
@@ -36,8 +36,8 @@ PART
 	attachRules = 1,0,1,1,0
 
 	TechRequired = start
-	entryCost = 11375
-	cost = 2275
+	entryCost = 1200
+	cost = 800
 
     category     = Pods
     subcategory  = 0
@@ -186,5 +186,12 @@ PART
             key = 0 1
         }
     }
-
+	
+	RESOURCE
+	{
+		name = Ore
+		amount = 0
+		maxAmount = 50
+	}	
+	
 }
