New FuelTank Model

--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Fuel_Tanks_Medium.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Fuel_Tanks_Medium.cfg
@@ -1,4 +1,8 @@
-﻿PART
+﻿
+// ʕ•ᴥ•ʔ    Knes Mod   °(ᵔᴥᵔ)°
+// Stéphane Colombain aka Well
+
+PART
 {
 	name = Knes_Fuel_Tanks_Medium
 	module = Part
@@ -9,16 +13,19 @@
 		model = Knes/Parts/Launcher/Ariane5/Knes_Fuel_Tanks_Medium	
 	}	
 	
-	rescaleFactor = 1
-	node_stack_top = 0.0, 1.93, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom = 0.0, -1.93, 0.0, 0.0, -1.0, 0.0, 3
-	node_attach = 0.0, 0.0, -1.89, 0.0, 0.0, 1.0
+    scale = 1
+    rescaleFactor = 1.0
+	
+	node_stack_top = 0.0, 2.0, 0.0, 0.0, 1.0, 0.0, 3
+	node_stack_bottom = 0.0, -2.0, 0.0, 0.0, -1.0, 0.0, 3
+	node_attach = 0.0, 0.0, -1.875, 0.0, 0.0, 1.0
+	
 	TechRequired = largeVolumeContainment
 	entryCost = 32600
 	cost = 6500
 	category = Propulsion
 	subcategory = 0
-	title = Knes Fuel Tanks Medium
+	title = Ariane "Behaviour" Medium Fuel Tank
 	manufacturer = Knes
 	description = Designed to be used with their advanced rocket engines.
 	attachRules = 1,1,1,1,0
