--- a/GameData/Knes/Parts/Launcher/Ariane5/Knes_Fuel_Tanks_Small.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/Knes_Fuel_Tanks_Small.cfg
@@ -1,4 +1,8 @@
-﻿PART
+﻿
+// ʕ•ᴥ•ʔ    Knes Mod   °(ᵔᴥᵔ)°
+// Stéphane Colombain aka Well
+
+PART
 {
 	name = Knes_Fuel_Tanks_Small
 	module = Part
@@ -9,16 +13,20 @@
 		model = Knes/Parts/Launcher/Ariane5/Knes_Fuel_Tanks_Small	
 	}	
 	
-	rescaleFactor = 1
-	node_stack_top = 0.0, 0.97045, 0.0, 0.0, 1, 0.0, 3
-	node_stack_bottom = 0.0, -0.97165, 0.0, 0.0, -1, 0.0, 3
+    scale = 1
+    rescaleFactor = 1.0
+	
+	node_stack_top = 0.0, 1.0, 0.0, 0.0, 1, 0.0, 3
+	node_stack_bottom = 0.0, -1.0, 0.0, 0.0, -1, 0.0, 3
 	node_attach = 0.0, 0.0, -1.875, 0.0, 0.0, 1.0
+	
 	TechRequired = largeVolumeContainment
-	entryCost = 18800
+	
+	entryCost = 15800
 	cost = 3250
 	category = Propulsion
 	subcategory = 0
-	title = Knes Fuel Tanks Small
+	title = Ariane "Slender" Small Fuel Tank
 	manufacturer = Knes
 	description = Small Fuel Tank
 	attachRules = 1,1,1,1,0
