Geodesy science def

--- a/GameData/Knes/Resources/ScienceDefs.cfg
+++ b/GameData/Knes/Resources/ScienceDefs.cfg
@@ -388,7 +388,23 @@ EXPERIMENT_DEFINITION
 
 	}
 }
-
+EXPERIMENT_DEFINITION
+{	
+	id = Geodesy
+	title = Geodesy
+	baseValue = 12
+	scienceCap = 12
+	dataScale = 1
+	
+	requireAtmosphere = False
+	situationMask = 63
+	biomeMask = 3
+	
+	RESULTS
+	{
+		default = Geodesy data collected.
+	}
+}
 
 //-----------------------------------------
 // Guide des situations et biomes possible:
