Crystal capacity for Cargo Viking

--- a/GameData/Knes/Parts/Spacecraft/Knes_Cargo_Pod_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/Knes_Cargo_Pod_09375.cfg
@@ -37,7 +37,7 @@ PART
 
 	TechRequired = start
 	entryCost = 1200
-	cost = 800
+	cost = 50800
 
     category     = Pods
     subcategory  = 0
@@ -194,4 +194,10 @@ PART
 		maxAmount = 50
 	}	
 	
+	RESOURCE
+	{
+		name = Crystal
+		amount = 0
+		maxAmount = 500
+	}	
 }
