--- a/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_G0625.cfg
+++ b/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_G0625.cfg
@@ -23,6 +23,7 @@ PART
 	buoyancy = 0.15
 	buoyancyUseSine = False
 	sound_vent_large = decouple
+	fx_gasBurst_white = 0.0, 0.0650517, 0.0, 0.0, 1.0, 0.0, decouple	
 	TechRequired = precisionEngineering
 	entryCost = 5200
 	cost = 300
