--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L140.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L140.cfg
@@ -31,7 +31,7 @@ PART
     subcategory  = 0
     title        = Ariane L-140 "Drakkar" Stage
     manufacturer = Knes
-    description  = 
+    description  = The first L140 stage blasted into the sky on Christmas Eve, 1979. An early Christmas present for the thousands of workers throughout Kerbin and at KSC who were involved in its development and production. From the onset, the launcher was to be developed for the purpose of sending commercial satellites into geosynchronous orbit, unlike many other competing launchers, which had been typically developed for other purposes and subsequently adapted, such as ballistic missiles.
 
     tags = 2.5 Knes Ariane L3S L140
 
@@ -61,8 +61,8 @@ PART
         exhaustDamage = True
         ignitionThreshold = 0.1
         minThrust = 0
-        maxThrust = 1200
-        heatProduction = 250
+        maxThrust = 700
+        heatProduction = 200
         PROPELLANT
         {
         name = LiquidFuel
@@ -131,6 +131,21 @@ PART
 				localPosition = 0, 0, 1
 				localScale = 1.0, 1.0, 1.0
 			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailRed
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.4
+				energy = 0.8 0.5
+				energy = 1 1
+				speed = 0 0.5
+				speed = 1 0.5
+				localPosition = 0, 0, 7
+				localScale = 1.5, 1.5, 1.5
+			}			
 			MODEL_MULTI_PARTICLE
 			{
 				name = shock
