--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220N.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220N.cfg
@@ -4,13 +4,13 @@
 
 PART
 {
-    name = _Knes_L3S_L220
+    name = _Knes_L3S_L220N
     module = Part
     author = Well
 
     MODEL
     {
-        model = Knes/Parts/Launcher/L3S/L3S_L220
+        model = Knes/Parts/Launcher/L3S/L3S_L220N
     }
 	
     scale = 1
@@ -24,18 +24,18 @@ PART
     attachRules = 1,1,1,1,0
 
     TechRequired = heavierRocketry
-    entryCost = 1100
-    cost = 1200
+    entryCost = 1200
+    cost = 1600
 
     category     = Propulsion
     subcategory  = 0
-    title        = Ariane L-220 "Valkyrie" Stage
+    title        = Ariane L-220N "Ragnarok" Stage
     manufacturer = Knes
-    description  = The L220 "Valkyrie" soon became considered to be a capable and competitive launcher in comparison to rival platforms. Main power was provided by four new Engine! Valkyrie has flown 116 times, 113 of which were successful, yielding a success rate of 97.4%
+    description  = The L-220N "Ragnarok" would be a considerably larger and more flexible launcher. This stage could be used in a number of variants, it could be fitted with two or four additional boosters.
 
-    tags = 2.5 Knes Ariane L3S L220
+    tags = 2.5 Knes Ariane L3S L220N
 
-    mass = 9.1
+    mass = 9.3
 
     dragModelType  = default
     maximum_drag   = 0.20
@@ -61,7 +61,7 @@ PART
         exhaustDamage = True
         ignitionThreshold = 0.1
         minThrust = 0
-        maxThrust = 760
+        maxThrust = 970
         heatProduction = 250
         PROPELLANT
         {
