--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_H8.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_H8.cfg
@@ -25,7 +25,7 @@ PART
 	cost = 2000
 	category = Propulsion
 	subcategory = 0
-	title = H8 Fuel Tanks
+	title = H8 "Taranis" Fuel Tanks
 	manufacturer = Knes
 	description = 
 	attachRules = 1,1,1,1,0
