--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33.cfg
@@ -25,7 +25,7 @@ PART
 	cost = 6000
 	category = Propulsion
 	subcategory = 0
-	title = L33 Fuel Tanks
+	title = L33 "Toutatis" Fuel Tanks
 	manufacturer = Knes
 	description = 
 	attachRules = 1,1,1,1,0
