--- a/GameData/Knes/Parts/Launcher/L3S/Knes_Fuel_Tanks_1875_H10.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/Knes_Fuel_Tanks_1875_H10.cfg
@@ -25,7 +25,7 @@ PART
 	cost = 2500
 	category = Propulsion
 	subcategory = 0
-	title = 1.875 scale H-10 Fuel Tanks
+	title = H10 "Belenos" Fuel Tanks
 	manufacturer = Knes
 	description = This H-10 fuel tank may just pack enough propellant for your flight.
 	attachRules = 1,1,1,1,0
