--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33_Engine.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33_Engine.cfg
@@ -18,16 +18,7 @@ PART
 	
 	node_stack_top = 0.0, 0.5, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -2.64179, 0.0, 0.0, -1.0, 0.0, 2
-	
-	fx_exhaustFlame_blue = 0.0, -2.2, 0.0, 0.0, 0.5, 0.0, running
-	fx_exhaustLight_blue = 0.0, -2.2, 0.0, 0.0, 0.0, 0.5, running
-	fx_smokeTrail_light = 0.0, -2.2, 0.0, 0.0, 0.5, 0.0, running
-	fx_exhaustSparks_flameout = 0.0, -2.2, 0.0, 0.0, 0.5, 0.0, flameout
-	
-	sound_vent_medium = engage
-	sound_rocket_hard = running
-	sound_vent_soft = disengage
-	sound_explosion_low = flameout
+
 	
 	TechRequired = advRocketry
 	entryCost = 8000
@@ -55,7 +46,7 @@ PART
 
 	MODULE
 	{
-		name = ModuleEngines
+		name = ModuleEnginesFX
 		thrustVectorTransformName = thrustTransform
 		exhaustDamage = True
 		ignitionThreshold = 0.1
@@ -83,6 +74,101 @@ PART
 			key = 6 0.001
 		}
 	}
+	EFFECTS
+	{
+		running
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.8
+				pitch = 1.0 1.0
+				loop = true
+			}
+
+			MODEL_MULTI_PARTICLE
+			{
+				name = flare
+				modelName = Knes/Resources/Plumes/diamantFlare
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				localPosition = 0, 0, 1
+				localScale = 1.0, 1.0, 1.0
+			}		
+			MODEL_MULTI_PARTICLE
+			{
+				name = shock
+				modelName = Knes/Resources/Plumes/diamantShock
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 0.5 1
+				speed = 0 0.5
+				speed = 1 1
+				localPosition = 0, 0, 0
+				localScale = 1.0, 1.0, 1.0
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				name = wisp
+				modelName = Knes/Resources/Plumes/diamantWisp
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.075 0.55
+				emission = 1.0 1.0
+				energy = 0 0.5
+				energy = 1 1
+				localPosition = 0, 0, 1
+				localScale = 1.0, 1.0, 1.0
+			}
+		}
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_medium
+				loop = false
+			}
+		}
+		disengage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				loop = false
+			}
+		}
+		flameout
+		{
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustSparks_flameout_2
+				transformName = thrustTransform
+				oneShot = true
+			}
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+	}	
 	MODULE
 	{
 		name = ModuleJettison
