--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33_Engine.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33_Engine.cfg
@@ -25,10 +25,10 @@ PART
 	cost = 2300
 	category = Engine
 	subcategory = 0
-	title = L33 "" Liquid Fuel Engine
+	title = L33 "Byrding" Liquid Fuel Engine
 	manufacturer = Knes
 	description = Combining high thrust with reasonable efficiency, this engine excels when used as a mid-stage booster for 1.875 Rockets.
-	attachRules = 1,0,1,0,0
+	attachRules = 1,1,1,1,0
 	mass = 1.8
 	heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
@@ -51,7 +51,7 @@ PART
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 450
+		maxThrust = 403
 		heatProduction = 280
 		fxOffset = 0, 0, 1.2
 		EngineType = LiquidFuel
@@ -69,8 +69,8 @@ PART
 		}
 		atmosphereCurve
 		{
-			key = 0 345
-			key = 1 280
+			key = 0 292
+			key = 1 260
 			key = 6 0.001
 		}
 	}
@@ -132,6 +132,18 @@ PART
 				localPosition = 0, 0, 1
 				localScale = 1.0, 1.0, 1.0
 			}
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_veryLarge
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 1
+			}			
 		}
 		engage
 		{
@@ -183,7 +195,7 @@ PART
 	{
 		name = ModuleGimbal
 		gimbalTransformName = Gimbal
-		gimbalRange = 4
+		gimbalRange = 3
 	}
 
 	MODULE
@@ -205,4 +217,42 @@ PART
 		falloff = 2
 		thrustTransformName = thrustTransform
 	}
+	MODULE
+    {
+        name = FXModuleThrottleEffects
+        fxModuleNames = colorChanger
+        responseSpeed = 0.002
+        dependOnEngineState = True
+        dependOnThrottle = True
+    }
+
+    MODULE
+    {
+        name = ModuleColorChanger
+        moduleID = colorChanger
+		animRate = 0.05
+        shaderProperty = _EmissiveColor
+        toggleInEditor = false
+        toggleInFlight = false
+        redCurve
+        {
+            key = 0 1
+            key = 1 1
+        }
+        greenCurve
+        {
+            key = 0 1
+            key = 1 1
+        }
+        blueCurve
+        {
+            key = 0 1
+            key = 1 1
+        }
+        alphaCurve
+        {
+            key = 0 0
+            key = 1 1
+        }
+    }	
 }
