--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220N.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220N.cfg
@@ -43,7 +43,7 @@ PART
     angularDrag    = 2
     crashTolerance = 15
 
-    maxTemp                    = 2000
+    maxTemp                    = 2500
     heatConductivity           = 0.06
     skinInternalConductionMult = 4.0
     emissiveConstant           = 0.8
@@ -62,7 +62,7 @@ PART
         ignitionThreshold = 0.1
         minThrust = 0
         maxThrust = 1940
-        heatProduction = 280
+        heatProduction = 180
         PROPELLANT
         {
         name = LiquidFuel
@@ -114,35 +114,35 @@ PART
 				pitch = 1.0 1.0
 				loop = true
 			}
-
 			MODEL_MULTI_PARTICLE
 			{
 				name = flare
 				modelName = Knes/Resources/Plumes/diamantFlare
 				transformName = thrustTransform
 				emission = 0.05 0.0
-				emission = 0.1 0.55
-				emission = 1.0 1.0
+				emission = 0.1 0.2
+				emission = 1.0 0.3
 				energy = 0 0.5
-				energy = 0.5 1
+				energy = 0.5 0.8
 				speed = 0 0.5
 				speed = 1 1
 				localPosition = 0, 0, 1
 				localScale = 1.0, 1.0, 1.0
 			}
+		
 			MODEL_MULTI_PARTICLE
 			{
 				name = shock
 				modelName = Knes/Resources/Plumes/diamantShock
 				transformName = thrustTransform
 				emission = 0.05 0.0
-				emission = 0.1 0.55
-				emission = 1.0 1.0
-				energy = 0 0.5
-				energy = 0.5 1
+				emission = 0.1 0.4
+				emission = 1.0 0.7
+				energy = 0 0.4
+				energy = 0.5 0.8
 				speed = 0 0.5
 				speed = 1 1
-				localPosition = 0, 0, 0
+				localPosition = 0, 0, 7
 				localScale = 1.0, 1.0, 1.0
 			}
 			MODEL_MULTI_PARTICLE
@@ -152,24 +152,39 @@ PART
 				transformName = thrustTransform
 				emission = 0.05 0.0
 				emission = 0.075 0.55
-				emission = 1.0 1.0
+				emission = 1.0 0.9
 				energy = 0 0.5
 				energy = 1 1
-				localPosition = 0, 0, 1
+				localPosition = 0, 0, 4
 				localScale = 1.0, 1.0, 1.0
 			}
-			PREFAB_PARTICLE
+			MODEL_MULTI_PARTICLE
 			{
-				prefabName = fx_smokeTrail_veryLarge
+				name = smoketrail
+				modelName = Knes/Resources/Plumes/diamantTrailRed
+				transformName = thrustTransform
+				emission = 0.05 0.0
+				emission = 0.1 0.55
+				emission = 1.0 1.4
+				energy = 0.8 0.5
+				energy = 1 1
+				speed = 0 0.5
+				speed = 1 0.5
+				localPosition = 0, 0, 8
+				localScale = 1.6, 1.6, 1.6
+			}			
+			MODEL_MULTI_PARTICLE
+			{
+				//modelName = Squad/FX/ks25_Exhaust
+				modelName = Squad/FX/hydroLOXFlame
 				transformName = thrustTransform
 				emission = 0.0 0.0
-				emission = 0.05 0.0
-				emission = 0.075 0.25
-				emission = 1.0 1.25
-				speed = 0.0 0.25
+				emission = 0.1 0.5
+				emission = 1.0 1.0
+				speed = 0.0 0.8
 				speed = 1.0 1.0
-				localOffset = 0, 0, 1
-			}				
+				localPosition = 0, 0, 0.5
+			}			
 		}
 		engage
 		{
