--- a/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_Radial_Small.cfg
+++ b/GameData/Knes/Parts/Core/Decouplers/Knes_Decoupler_Radial_Small.cfg
@@ -45,7 +45,8 @@ PART
 	{
 		name = ModuleAnchoredDecoupler
 		anchorName = anchor
-		ejectionForce = 50
+		ejectionForce = 100
+		explosiveDir = 0, 0, -1
 		explosiveNodeID = srf
 	}
 	
