--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220.cfg
@@ -107,10 +107,10 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_rocket_mini
+				clip = sound_rocket_spurts
 				volume = 0.0 0.0
 				volume = 1.0 1.0
-				pitch = 0.0 0.8
+				pitch = 0.0 0.2
 				pitch = 1.0 1.0
 				loop = true
 			}
@@ -191,7 +191,9 @@ PART
 			AUDIO
 			{
 				channel = Ship
-				clip = sound_vent_medium
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
 				loop = false
 			}
 		}
