--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM60_Engine.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM60_Engine.cfg
@@ -4,33 +4,32 @@
 
 PART
 {
-	name = Knes_Engine_Zebulon
+	name = _Knes_L3S_L3S_HM60_Engine
 	module = Part
 	author = Well
 	
 	MODEL
 	{
-		model = Knes/Parts/Launcher/L3S/L3S_HM7_Engine		
+		model = Knes/Parts/Launcher/L3S/L3S_HM60_Engine
 	}	
 	
 	scale = 1	
 	rescaleFactor = 1
 	
-	node_stack_top = 0.0, 0.5, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -1.53363, 0.0, 0.0, -1.0, 0.0, 2
-
+	node_stack_top = 0.0, 0.66667, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -2.75, 0.0, 0.0, -1.0, 0.0, 2
 
 	
 	TechRequired = advRocketry
 	entryCost = 8000
-	cost = 2300
+	cost = 2500
 	category = Engine
 	subcategory = 0
-	title = HM7 "Zebulon" Liquid Fuel Engine
+	title = HM60 "Themis" Liquid Fuel Engine
 	manufacturer = Knes
-	description = Combining high thrust with reasonable efficiency, this engine excels when used as a mid-stage booster for 1.875 Rockets.
+	description = Combining high thrust with reasonable efficiency, this engine excels when used as a mid-stage booster for 2.5 Rockets.
 	attachRules = 1,1,1,1,0
-	mass = 0.9
+	mass = 1.4
 	heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.8 // engine nozzles are good at radiating.
@@ -38,12 +37,12 @@ PART
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 8
+	crashTolerance = 12
 	breakingForce = 180
 	breakingTorque = 180
-	maxTemp = 2000 // = 3600
-	bulkheadProfiles = size1p5
-	tags = propuls rocket Knes sustain Zebulon
+	maxTemp = 3200
+	bulkheadProfiles = size2
+	tags = propuls rocket Knes sustain themis HM60
 
 	MODULE
 	{
@@ -52,11 +51,10 @@ PART
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 38
-		heatProduction = 80
-		fxOffset = 0, 0, 1.2
+		maxThrust = 590
+		heatProduction = 280
+		fxOffset = 0, 0, 0.5
 		EngineType = LiquidFuel
-		runningEffectName = running	
 		exhaustDamageDistanceOffset = 1.25
 		PROPELLANT
 		{
@@ -71,8 +69,8 @@ PART
 		}
 		atmosphereCurve
 		{
-			key = 0 442
-			key = 1 380
+			key = 0 432
+			key = 1 339
 			key = 6 0.001
 		}
 	}
@@ -113,24 +111,12 @@ PART
 				emission = 1.0 1.0
 				speed = 0.0 0.8
 				speed = 1.0 1.0
-				localPosition = 0, 0, -0.6
-				localScale = 0.8, 0.8, 0.8			
+				localPosition = 0, 0, 1
+				//localScale = 2.0, 2.0, 2.0		
 			}
 		}
 		shockDiamond
 		{
-
-//			MODEL_MULTI_PARTICLE
-//			{
-//				modelName = Squad/FX/diamondBlue
-//				transformName = thrustTransform
-//				emission = 0.0 0.0
-//				//emission = 0.05 0.0
-//				//emission = 0.075 0.5
-//				emission = 1.0 1.0
-//				speed = 0.0 0.2
-//				speed = 1.0 1.0
-//			}
 			PREFAB_PARTICLE
 			{
 				prefabName = fx_exhaustFlame_blue_small
@@ -141,7 +127,7 @@ PART
 				emission = 1.0 5.0
 				speed = 0.0 0.5
 				speed = 1.0 0.8
-				localOffset = 0, 0, -0.5
+				localOffset = 0, 0, -0.5			
 			}
 		}
 		engage
@@ -176,7 +162,7 @@ PART
 	MODULE
 	{
 		name = ModuleJettison
-		jettisonName = Fairing_125,Fairing_1875
+		jettisonName = Fairing
 		bottomNodeName = bottom
 		isFairing = True
 		jettisonedObjectMass = 0.5
